Package: aroma.core
===================

Version: 3.2.2-9001 [2022-11-07]

DOCUMENTATION

 * Drop duplicated arguments from help for writeDataFrame() of
   AromaUnitSignalBinaryFile and AromaUnitTabularBinaryFile.
 

Version: 3.2.2 [2021-01-02]

NEW FEATURES:

 * downloadFile() for AromaRepository is now smarter about *.gz files.
 
BUG FIXES:

 * Re-export S3 generic process() from R.rsp.

 * Argument 'pattern' for findByGenome() for AromaGenomeTextFile has an
   sprintf() mistake causing it to produce a warning in R (>= 4.1.0).


Version: 3.2.1 [2020-02-03]

SIGNIFICANT CHANGES:

 * Package requires R (>= 3.2.1) released in June 2015 and BioC (>= 3.2)
   released in October 2015.

MISCELLANEOUS:

 * WORKAROUND: Package fails 'R CMD check' with _R_CHECK_LENGTH_1_LOGIC2_=true
   due to PR#17663 (https://bugs.r-project.org/bugzilla/show_bug.cgi?id=17663).
   Made a simple code tweak to avoid this bug hitting us.

 * WORKAROUND: There's a _R_CHECK_LENGTH_1_LOGIC2_ bug in mpcbs::mpcbs.mbic().
   Until fixed, we need to disable this check while testing segmentByMPCBS().


Version: 3.2.0 [2019-06-17]

BUG FIXES:

 * findByChipType() for AromaMicroarrayTabularBinaryFile and TextUnitNamesFile
   would only recognize Windows Shortcut Links with a filename extension in
   lower case (*.lnk) but not in upper case (*.LNK).


Version: 3.1.3 [2018-04-30]
 
BUG FIXES:

 * Imported extract() from R.utils instead of R.filesets, which would result
   in R CMD check errors for aroma.affymetrix with R-devel (>= 3.6.0).
 

Version: 3.1.2 [2018-04-23]
 
WORKAROUND:

 * For R (>= 3.6.0), don't run examples or tests that rely on the Bioconductor
   package 'GLAD' or the legacy R-Forge package 'expectile' because they do
   not properly registered S3 generic function.


Version: 3.1.1 [2017-09-12]

BUG FIXES:

 * getRegions() for CopyNumberSegmentationModel used future strategy 'eager'
   that is defunct in future (>= 1.6.0) - updated to 'sequential'.


Version: 3.1.0 [2017-03-22]
