@@ -1,5 +1,5 @@
 Package: aroma.core
-Version: 3.2.2-9001
+Version: 3.2.2-9002
 Depends:
   R (>= 3.2.1),
   R.utils (>= 2.10.1),
