@@ -1206,7 +1206,6 @@ S3method("stextChipType", "character")
 S3method("stringTree", "character")
 
 S3method("drawCytoband2", "default")
-S3method("whatDataType", "default")
 S3method("write", "default")
 S3method("processTime", "default")
 S3method("requireWithMemory", "default")
