@@ -1,17 +1,0 @@
-## - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-## DEFUNCT
-## - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-setMethodS3("whatDataType", "default", function(type, ...) {
-  .Defunct(msg = "whatDataType() is deprecated (as of aroma.core 2.14.0) with no alternative implementation. Please contact the maintainer of the aroma.core package if you wish that this function should remain available.")
-}, private=TRUE, deprecated=TRUE)
-
-
-## - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-## DEPRECATED
-## - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-
-
-
-## - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-## TO DEPRECATE
-## - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
