@@ -7,7 +7,11 @@ DOCUMENTATION
 
  * Drop duplicated arguments from help for writeDataFrame() of
    AromaUnitSignalBinaryFile and AromaUnitTabularBinaryFile.
- 
+
+DEPRECATED AND DEFUNCT:
+
+ * Removed defunct method whatDataType().
+
 
 Version: 3.2.2 [2021-01-02]
 
